--- a/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>MERLIN_SNPKIT_matrices</title>
 
@@ -352,14 +352,14 @@ display: none;
 
 <h1 class="title toc-ignore">MERLIN_SNPKIT_matrices</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
-<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(escre==T &amp; qc_pass==T)</code></pre>
+<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)</code></pre>
 <pre class="r"><code># Load
 setwd(&quot;~/Desktop/gl_merlin/Sequence_data/variant_calling/2025-04-15_SNPKIT/&quot;)
 
