--- a/scripts/SNP_cluster_detection/MERLIN_SNP_cluster_detection_30_threshold.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_cluster_detection_30_threshold.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>MERLIN_SNP_cluster_detection_30_threshold</title>
 
@@ -352,14 +352,14 @@ display: none;
 
 <h1 class="title toc-ignore">MERLIN_SNP_cluster_detection_30_threshold</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
-<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(escre==T &amp; qc_pass==T)
+<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)
 overall_pair_types &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_pairs_dataset.RDS&#39;)
 SNP_distance_matrices &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_matrices.RDS&#39;)</code></pre>
 </div>
