--- a/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>MERLIN_SNP_Pair_DF</title>
 
@@ -352,14 +352,14 @@ display: none;
 
 <h1 class="title toc-ignore">MERLIN_SNP_Pair_DF</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
-<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(escre==T &amp; qc_pass==T)</code></pre>
+<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)</code></pre>
 <pre class="r"><code>species &lt;- table(df$Species) %&gt;% subset(.&gt;1)  %&gt;% names
 species_simple &lt;- str_split(string = species,pattern = &quot; &quot;,simplify = T) %&gt;% apply(.,1,FUN=function(x){
   genus &lt;- x[1] %&gt;% substr(.,1,1)  %&gt;% tolower()
