--- a/scripts/SNP_cluster_detection/MERLIN_SNP_cluster_detection_30_threshold.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_cluster_detection_30_threshold.html
@@ -359,6 +359,68 @@ display: none;
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;,&#39;ggraph&#39;,&#39;igraph&#39;) 
+
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>                                                                                            sysname 
+                                                                                           &quot;Darwin&quot; 
+                                                                                            release 
+                                                                                           &quot;24.5.0&quot; 
+                                                                                            version 
+&quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+                                                                                           nodename 
+                                                                                   &quot;msla0572.local&quot; 
+                                                                                            machine 
+                                                                                           &quot;x86_64&quot; 
+                                                                                              login 
+                                                                                             &quot;root&quot; 
+                                                                                               user 
+                                                                                         &quot;kgontjes&quot; 
+                                                                                     effective_user 
+                                                                                         &quot;kgontjes&quot; </code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>R version 4.5.0 (2025-04-11)
+Platform: x86_64-apple-darwin20
+Running under: macOS Sequoia 15.5
+
+Matrix products: default
+BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+
+locale:
+[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+
+time zone: America/Detroit
+tzcode source: internal
+
+attached base packages:
+[1] stats     graphics  grDevices utils     datasets  methods   base     
+
+other attached packages:
+ [1] igraph_2.1.4    ggraph_2.2.1    lubridate_1.9.4 forcats_1.0.0  
+ [5] stringr_1.5.1   dplyr_1.1.4     purrr_1.0.4     readr_2.1.5    
+ [9] tidyr_1.3.1     tibble_3.2.1    ggplot2_3.5.2   tidyverse_2.0.0
+[13] knitr_1.50     
+
+loaded via a namespace (and not attached):
+ [1] viridis_0.6.5      sass_0.4.10        generics_0.1.4     stringi_1.8.7     
+ [5] hms_1.1.3          digest_0.6.37      magrittr_2.0.3     evaluate_1.0.3    
+ [9] grid_4.5.0         timechange_0.3.0   RColorBrewer_1.1-3 fastmap_1.2.0     
+[13] jsonlite_2.0.0     ggrepel_0.9.6      gridExtra_2.3      viridisLite_0.4.2 
+[17] scales_1.4.0       tweenr_2.0.3       jquerylib_0.1.4    cli_3.6.5         
+[21] rlang_1.1.6        graphlayouts_1.2.2 polyclip_1.10-7    tidygraph_1.3.1   
+[25] withr_3.0.2        cachem_1.1.0       yaml_2.3.10        tools_4.5.0       
+[29] tzdb_0.5.0         memoise_2.0.1      vctrs_0.6.5        R6_2.6.1          
+[33] lifecycle_1.0.4    MASS_7.3-65        pkgconfig_2.0.3    pillar_1.10.2     
+[37] bslib_0.9.0        gtable_0.3.6       glue_1.8.0         Rcpp_1.0.14       
+[41] ggforce_0.4.2      xfun_0.52          tidyselect_1.2.1   rstudioapi_0.17.1 
+[45] farver_2.1.2       htmltools_0.5.8.1  rmarkdown_2.29     compiler_4.5.0    </code></pre>
 <pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)
 overall_pair_types &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_pairs_dataset.RDS&#39;)
 SNP_distance_matrices &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_matrices.RDS&#39;)</code></pre>
