--- a/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-05-28" />
 
-<title>MERLIN_SNP_Pair_DF</title>
+<title>Generate pairs for SNP distance analyses</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">MERLIN_SNP_Pair_DF</h1>
+<h1 class="title toc-ignore">Generate pairs for SNP distance
+analyses</h1>
 <h4 class="author">Kyle Gontjes</h4>
 <h4 class="date">2025-05-28</h4>
 
@@ -359,6 +360,86 @@ display: none;
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;,&#39;ape&#39;,&#39;kableExtra&#39;,&#39;phytools&#39;,&#39;igraph&#39;,&#39;ggraph&#39;,&#39;tableone&#39;,&#39;kableExtra&#39;) 
+
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>                                                                                            sysname 
+                                                                                           &quot;Darwin&quot; 
+                                                                                            release 
+                                                                                           &quot;24.5.0&quot; 
+                                                                                            version 
+&quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+                                                                                           nodename 
+                                                                                   &quot;msla0572.local&quot; 
+                                                                                            machine 
+                                                                                           &quot;x86_64&quot; 
+                                                                                              login 
+                                                                                             &quot;root&quot; 
+                                                                                               user 
+                                                                                         &quot;kgontjes&quot; 
+                                                                                     effective_user 
+                                                                                         &quot;kgontjes&quot; </code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>R version 4.5.0 (2025-04-11)
+Platform: x86_64-apple-darwin20
+Running under: macOS Sequoia 15.5
+
+Matrix products: default
+BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+
+locale:
+[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+
+time zone: America/Detroit
+tzcode source: internal
+
+attached base packages:
+[1] stats     graphics  grDevices utils     datasets  methods   base     
+
+other attached packages:
+ [1] tableone_0.13.2  ggraph_2.2.1     igraph_2.1.4     phytools_2.4-4  
+ [5] maps_3.4.2.1     kableExtra_1.4.0 ape_5.8-1        lubridate_1.9.4 
+ [9] forcats_1.0.0    stringr_1.5.1    dplyr_1.1.4      purrr_1.0.4     
+[13] readr_2.1.5      tidyr_1.3.1      tibble_3.2.1     ggplot2_3.5.2   
+[17] tidyverse_2.0.0  knitr_1.50      
+
+loaded via a namespace (and not attached):
+ [1] tidyselect_1.2.1        viridisLite_0.4.2       farver_2.1.2           
+ [4] viridis_0.6.5           optimParallel_1.0-2     fastmap_1.2.0          
+ [7] combinat_0.0-8          tweenr_2.0.3            digest_0.6.37          
+[10] timechange_0.3.0        lifecycle_1.0.4         survival_3.8-3         
+[13] magrittr_2.0.3          compiler_4.5.0          rlang_1.1.6            
+[16] sass_0.4.10             tools_4.5.0             yaml_2.3.10            
+[19] phangorn_2.12.1         clusterGeneration_1.3.8 graphlayouts_1.2.2     
+[22] mnormt_2.1.1            scatterplot3d_0.3-44    xml2_1.3.8             
+[25] RColorBrewer_1.1-3      expm_1.0-0              withr_3.0.2            
+[28] numDeriv_2016.8-1.1     grid_4.5.0              polyclip_1.10-7        
+[31] scales_1.4.0            iterators_1.0.14        MASS_7.3-65            
+[34] survey_4.4-2            cli_3.6.5               rmarkdown_2.29         
+[37] generics_0.1.4          rstudioapi_0.17.1       tzdb_0.5.0             
+[40] DBI_1.2.3               cachem_1.1.0            ggforce_0.4.2          
+[43] splines_4.5.0           parallel_4.5.0          mitools_2.4            
+[46] vctrs_0.6.5             Matrix_1.7-3            jsonlite_2.0.0         
+[49] hms_1.1.3               ggrepel_0.9.6           systemfonts_1.2.2      
+[52] foreach_1.5.2           jquerylib_0.1.4         glue_1.8.0             
+[55] codetools_0.2-20        DEoptim_2.2-8           stringi_1.8.7          
+[58] gtable_0.3.6            quadprog_1.5-8          pillar_1.10.2          
+[61] htmltools_0.5.8.1       R6_2.6.1                doParallel_1.0.17      
+[64] tidygraph_1.3.1         evaluate_1.0.3          lattice_0.22-7         
+[67] memoise_2.0.1           bslib_0.9.0             Rcpp_1.0.14            
+[70] fastmatch_1.1-6         gridExtra_2.3           svglite_2.1.3          
+[73] coda_0.19-4.1           nlme_3.1-168            xfun_0.52              
+[76] pkgconfig_2.0.3        </code></pre>
+</div>
+<div id="load-data" class="section level1">
+<h1>Load data</h1>
 <pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)</code></pre>
 <pre class="r"><code>species &lt;- table(df$Species) %&gt;% subset(.&gt;1)  %&gt;% names
 species_simple &lt;- str_split(string = species,pattern = &quot; &quot;,simplify = T) %&gt;% apply(.,1,FUN=function(x){
