--- a/scripts/ESBL_plasmids/mobsuite_AMR_gene_data_curation.html
+++ b/scripts/ESBL_plasmids/mobsuite_AMR_gene_data_curation.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-28" />
+<meta name="date" content="2025-06-30" />
 
 <title>mobsuite_AMR_gene_data_curation</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">mobsuite_AMR_gene_data_curation</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-28</h4>
+<h4 class="date">2025-06-30</h4>
 
 </div>
 
@@ -360,7 +360,7 @@ display: none;
 <div id="environment" class="section level1">
 <h1>Environment</h1>
 <pre class="r"><code>#Packages
-packages &lt;- c(&quot;tidyverse&quot;) 
+packages &lt;- c(&quot;tidyverse&quot;,&quot;kableExtra&quot;) 
 
 #Load Packages
 invisible(lapply(packages,library,character.only=T,quietly=T)) 
@@ -385,7 +385,7 @@ Sys.info()</code></pre>
 ##                                                                                      effective_user 
 ##                                                                                          &quot;kgontjes&quot;</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>## R version 4.5.0 (2025-04-11)
+<pre><code>## R version 4.5.1 (2025-06-13)
 ## Platform: x86_64-apple-darwin20
 ## Running under: macOS Sequoia 15.5
 ## 
@@ -403,38 +403,37 @@ Sys.info()</code></pre>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] lubridate_1.9.4 forcats_1.0.0   stringr_1.5.1   dplyr_1.1.4    
-##  [5] purrr_1.0.4     readr_2.1.5     tidyr_1.3.1     tibble_3.2.1   
-##  [9] ggplot2_3.5.2   tidyverse_2.0.0 knitr_1.50     
+##  [1] kableExtra_1.4.0 lubridate_1.9.4  forcats_1.0.0    stringr_1.5.1   
+##  [5] dplyr_1.1.4      purrr_1.0.4      readr_2.1.5      tidyr_1.3.1     
+##  [9] tibble_3.2.1     ggplot2_3.5.2    tidyverse_2.0.0  knitr_1.50      
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
-##  [5] jquerylib_0.1.4    scales_1.4.0       yaml_2.3.10        fastmap_1.2.0     
-##  [9] R6_2.6.1           generics_0.1.4     bslib_0.9.0        pillar_1.10.2     
-## [13] RColorBrewer_1.1-3 tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0      
-## [17] stringi_1.8.7      xfun_0.52          sass_0.4.10        timechange_0.3.0  
-## [21] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
-## [25] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
-## [29] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
-## [33] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1</code></pre>
+##  [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.1     tidyselect_1.2.1  
+##  [5] xml2_1.3.8         jquerylib_0.1.4    systemfonts_1.2.2  scales_1.4.0      
+##  [9] yaml_2.3.10        fastmap_1.2.0      R6_2.6.1           generics_0.1.4    
+## [13] svglite_2.1.3      bslib_0.9.0        pillar_1.10.2      RColorBrewer_1.1-3
+## [17] tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0       stringi_1.8.7     
+## [21] xfun_0.52          sass_0.4.10        viridisLite_0.4.2  timechange_0.3.0  
+## [25] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
+## [29] grid_4.5.1         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+## [33] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
+## [37] rmarkdown_2.29     tools_4.5.1        pkgconfig_2.0.3    htmltools_0.5.8.1</code></pre>
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
-<pre class="r"><code>df &lt;- readRDS(&quot;./data/dataset/MERLIN_cohort_metadata_final.RDS&quot;)  %&gt;% subset(WGS_escre == TRUE &amp; qc_pass == TRUE) 
+<pre class="r"><code>df &lt;- readRDS(&quot;./data/dataset/MERLIN_cohort_index_cases_metadata_final.RDS&quot;)  %&gt;% subset(WGS_escre == TRUE &amp; qc_pass == TRUE) 
 isolates &lt;- df$genomic_id
 
-amrfinder_mat &lt;- readRDS(&quot;./data/amrfinder/amrfinder_matrix.RDS&quot;)
-amrfinder &lt;- readRDS(&quot;./data/amrfinder/amrfinder_cleaned.txt&quot;) 
+amrfinder &lt;- readRDS(&quot;./data/amrfinder/amrfinder_cleaned.txt&quot;)  %&gt;% subset(genomic_id %in% isolates)
+amrfinder_mat &lt;- readRDS(&quot;./data/amrfinder/amrfinder_matrix.RDS&quot;) %&gt;% subset(rownames(.) %in% isolates)
+ESCrE_genotype_info &lt;- readRDS(&quot;./data/amrfinder/beta_lactamase_summary_index_cohort.RDS&quot;)
  
-mobsuite_contigs &lt;- readRDS(&quot;./data/mobsuite/mobsuite_contigs.RDS&quot;) 
-mobtyper &lt;- readRDS(&quot;./data/mobsuite/mobtyper.RDS&quot;)</code></pre>
+mobsuite_contigs &lt;- readRDS(&quot;./data/mobsuite/mobsuite_contigs.RDS&quot;) %&gt;% subset(genomic_id%in% isolates)
+mobtyper &lt;- readRDS(&quot;./data/mobsuite/mobtyper.RDS&quot;)%&gt;% subset(genomic_id %in% isolates)</code></pre>
 </div>
 <div id="annotate-contigs-with-amrfinder-data" class="section level1">
 <h1>Annotate contigs with AMRFinder data</h1>
-<pre class="r"><code>amrfinder_qc_pass &lt;- subset(amrfinder,genomic_id %in% df$genomic_id)
-amrfinder_mat_qc_passe &lt;- subset(amrfinder_mat,rownames(amrfinder_mat) %in% amrfinder_qc_pass$genomic_id)
-  
-genes &lt;- amrfinder_qc_pass$element_symbol %&gt;% unique %&gt;% sort
+<pre class="r"><code>genes &lt;- ESCrE_genotype_info$element_symbol %&gt;% unique %&gt;% sort
 
 annotate_contigs &lt;- function(gene,amrfinder_df,mobsuite_contig_df){
   amrfinder_w_gene &lt;- amrfinder_df %&gt;% subset(element_symbol == gene)
@@ -444,7 +443,7 @@ annotate_contigs &lt;- function(gene,amrfinder_df,mobsuite_contig_df){
   return(row)
 }
 
-gene_pres &lt;- lapply(genes,FUN=annotate_contigs,amrfinder_df = amrfinder_qc_pass,mobsuite_contig_df = mobsuite_contigs) %&gt;% do.call(cbind,.) %&gt;% mutate(contig_id = mobsuite_contigs$contig_id)
+gene_pres &lt;- lapply(genes,FUN=annotate_contigs,amrfinder_df = amrfinder,mobsuite_contig_df = mobsuite_contigs) %&gt;% do.call(cbind,.) %&gt;% mutate(contig_id = mobsuite_contigs$contig_id)
 
 mobsuite_contigs &lt;- left_join(mobsuite_contigs,gene_pres)</code></pre>
 <pre><code>## Joining with `by = join_by(contig_id)`</code></pre>
@@ -478,7 +477,7 @@ count_genes_mobsuite &lt;- function(isolate,genes,mobsuite_contigs){
   data &lt;- rbind(chromosome_info,plasmid_info)
   return(data)
 } 
-qc_genomes &lt;- amrfinder_qc_pass$genomic_id %&gt;% unique %&gt;% sort
+qc_genomes &lt;- amrfinder$genomic_id %&gt;% unique %&gt;% sort
 
 mobsuite_gene_pres &lt;- lapply(qc_genomes,FUN=count_genes_mobsuite,genes=genes,mobsuite_contigs=mobsuite_contigs) %&gt;% do.call(rbind,.)</code></pre>
 <pre><code>## Warning: Using an external vector in selections was deprecated in tidyselect 1.1.0.
@@ -497,23 +496,19 @@ mobsuite_gene_pres &lt;- lapply(qc_genomes,FUN=count_genes_mobsuite,genes=genes,
 <div id="annotate-w-amr-blactam-categories" class="section level1">
 <h1>Annotate w/ AMR + Blactam categories</h1>
 <pre class="r"><code>AMR_genes &lt;- amrfinder %&gt;% subset(type ==&quot;AMR&quot;) %&gt;% .$element_symbol %&gt;% unique %&gt;% sort 
-BLA_genes &lt;- amrfinder %&gt;% subset(class ==&quot;BETA-LACTAM&quot;) %&gt;% .$element_symbol %&gt;% unique %&gt;% sort 
-BLA_carbapenem_genes &lt;- amrfinder %&gt;% subset(class ==&quot;BETA-LACTAM&quot; &amp; subclass==&quot;CARBAPENEM&quot;) %&gt;% .$element_symbol %&gt;% unique %&gt;% sort 
-BLA_ceph_genes &lt;- amrfinder %&gt;% subset(class ==&quot;BETA-LACTAM&quot; &amp; subclass %in% c(&quot;CEPHALOSPORIN&quot;,&quot;CEFIDEROCOL/CEPHALOSPORIN&quot;)) %&gt;% .$element_symbol %&gt;% unique %&gt;% sort 
-ESBL_genes &lt;- subset(amrfinder,class==&quot;BETA-LACTAM&quot;) %&gt;% .$element_symbol %&gt;% unique %&gt;% subset(.,grepl(&quot;CTX|OXA|TEM|SHV|CMY|NDM|PER|VEB|GES|TLA|BES&quot;,.))
+BLA_genes &lt;- ESCrE_genotype_info$element_symbol %&gt;% unique %&gt;% sort
+ESCrE_genes &lt;- ESCrE_genotype_info %&gt;% subset(ESCrE ==T) %&gt;% .$element_symbol %&gt;% unique %&gt;% sort
 
-mobsuite_gene_pres$AMR_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(AMR_genes)) %&gt;% rowSums()&gt;0,1,0)
-mobsuite_gene_pres$BETA_LACTAM_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(BLA_genes)) %&gt;% rowSums()&gt;0,1,0)
-mobsuite_gene_pres$BETA_LACTAM_CARBAPENEM_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(BLA_carbapenem_genes)) %&gt;% rowSums()&gt;0,1,0)
-mobsuite_gene_pres$BETA_LACTAM_CEPHALOSPORIN_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(BLA_ceph_genes)) %&gt;% rowSums()&gt;0,1,0)
-mobsuite_gene_pres$ESBL_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(ESBL_genes)) %&gt;% rowSums()&gt;0,1,0)
+mobsuite_gene_pres$AMR_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(AMR_genes)) %&gt;% rowSums()&gt;0,T,F)
+mobsuite_gene_pres$BETA_LACTAM_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(BLA_genes)) %&gt;% rowSums()&gt;0,T,F) 
+mobsuite_gene_pres$ESCrE_contig &lt;- ifelse(mobsuite_gene_pres %&gt;% select(any_of(ESCrE_genes)) %&gt;% rowSums()&gt;0,T,F) 
 
-saveRDS(mobsuite_gene_pres,&quot;./data/ESBL_plasmids/amrfinder_mobsuite_gene_presence.RDS&quot;)</code></pre>
+saveRDS(mobsuite_gene_pres,&quot;./data/ESBL_plasmids/amrfinder_mobsuite_beta_lactamase_presence.RDS&quot;)</code></pre>
 </div>
 <div id="get-isolates" class="section level1">
 <h1>Get isolate’s</h1>
-<pre class="r"><code>plasmid_sum_info_blactam &lt;- mobsuite_gene_pres %&gt;% subset(BETA_LACTAM_contig ==1)
-plasmid_sum_info_ESBL &lt;- mobsuite_gene_pres %&gt;% subset(ESBL_contig ==1)
+<pre class="r"><code>plasmid_sum_info_blactam &lt;- mobsuite_gene_pres %&gt;% subset(BETA_LACTAM_contig ==T)
+plasmid_sum_info_ESCrE &lt;- mobsuite_gene_pres %&gt;% subset(ESCrE_contig ==T)
 
 get_mobtyper_cluster_from_amrfinder &lt;- function (df, mobtyper) 
 {
@@ -556,20 +551,10 @@ blactam_plasmid_contigs &lt;- get_mobtyper_cluster_from_amrfinder(df,plasmid_sum
 ## • `` -&gt; `...24`
 ## • `` -&gt; `...25`
 ## • `` -&gt; `...26`
-## • `` -&gt; `...27`
-## • `` -&gt; `...28`
-## • `` -&gt; `...29`
-## • `` -&gt; `...30`
-## • `` -&gt; `...31`
-## • `` -&gt; `...32`
-## • `` -&gt; `...33`
-## • `` -&gt; `...34`
-## • `` -&gt; `...35`
-## • `` -&gt; `...36`
-## • `` -&gt; `...37`</code></pre>
+## • `` -&gt; `...27`</code></pre>
 <pre class="r"><code>saveRDS(blactam_plasmid_contigs,&quot;./data/ESBL_plasmids/amrfinder_beta_lactam_contig_matrix.RDS&quot;)
 
-ESBL_plasmid_contigs &lt;- get_mobtyper_cluster_from_amrfinder(df,plasmid_sum_info_blactam)</code></pre>
+ESCrE_plasmid_contigs &lt;- get_mobtyper_cluster_from_amrfinder(df,plasmid_sum_info_ESCrE)</code></pre>
 <pre><code>## New names:
 ## • `` -&gt; `...1`
 ## • `` -&gt; `...2`
@@ -590,25 +575,8 @@ ESBL_plasmid_contigs &lt;- get_mobtyper_cluster_from_amrfinder(df,plasmid_sum_in
 ## • `` -&gt; `...17`
 ## • `` -&gt; `...18`
 ## • `` -&gt; `...19`
-## • `` -&gt; `...20`
-## • `` -&gt; `...21`
-## • `` -&gt; `...22`
-## • `` -&gt; `...23`
-## • `` -&gt; `...24`
-## • `` -&gt; `...25`
-## • `` -&gt; `...26`
-## • `` -&gt; `...27`
-## • `` -&gt; `...28`
-## • `` -&gt; `...29`
-## • `` -&gt; `...30`
-## • `` -&gt; `...31`
-## • `` -&gt; `...32`
-## • `` -&gt; `...33`
-## • `` -&gt; `...34`
-## • `` -&gt; `...35`
-## • `` -&gt; `...36`
-## • `` -&gt; `...37`</code></pre>
-<pre class="r"><code>saveRDS(ESBL_plasmid_contigs,&quot;./data/ESBL_plasmids/amrfinder_ESBL_contig_matrix.RDS&quot;)</code></pre>
+## • `` -&gt; `...20`</code></pre>
+<pre class="r"><code>saveRDS(ESCrE_plasmid_contigs,&quot;./data/ESBL_plasmids/amrfinder_ESCrE_contig_matrix.RDS&quot;)</code></pre>
 </div>
 
 
