--- a/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-09" />
+<meta name="date" content="2025-10-30" />
 
-<title>Generate SNP Distance Matrices</title>
+<title>SNP Clustering Step 1: Generate SNP Distance Matrices</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,9 +350,10 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Generate SNP Distance Matrices</h1>
+<h1 class="title toc-ignore">SNP Clustering Step 1: Generate SNP
+Distance Matrices</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-09</h4>
+<h4 class="date">2025-10-30</h4>
 
 </div>
 
@@ -387,7 +388,7 @@ Sys.info()</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.7
+Running under: macOS Sequoia 15.7.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -436,7 +437,10 @@ loaded via a namespace (and not attached):
 [70] Rcpp_1.1.0              fastmatch_1.1-6         gridExtra_2.3          
 [73] svglite_2.2.1           coda_0.19-4.1           nlme_3.1-168           
 [76] xfun_0.53               pkgconfig_2.0.3        </code></pre>
-<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)</code></pre>
+<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd_w_sra_metadata.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)
+
+paste0(&quot;Number of considered isolates: &quot;,nrow(df))</code></pre>
+<pre><code>[1] &quot;Number of considered isolates: 168&quot;</code></pre>
 <pre class="r"><code># Load
 setwd(&quot;~/Desktop/gl_merlin/Sequence_data/variant_calling/2025-04-15_SNPKIT/&quot;)
 
@@ -446,7 +450,8 @@ species &lt;- table(df$Species) %&gt;% subset(.&gt;1) %&gt;% names %&gt;% str_sp
   paste0(genus,species)
 })  
 
-dist_matrix &lt;- pbmcapply::pbmclapply(species,FUN=function(x){ 
+dist_matrix &lt;- pbmcapply::pbmclapply(species,FUN=function(x){  
+  # Load file
   if(x %in% c(&#39;cportucalensis&#39;,&#39;sliquefaciens&#39;)){
     name &lt;- paste0(x,&#39;_var_sites.fa&#39;)
     path &lt;- paste0(&quot;./&quot;,x,&quot;/snpkit_rfmt_results/phylo_analysis/IQtree/&quot;,name)
@@ -462,7 +467,9 @@ dist_matrix &lt;- pbmcapply::pbmclapply(species,FUN=function(x){
 ) %&gt;%  as.data.frame 
   if(x == &quot;ecoli&quot;){
     dna_matrix &lt;- dna_matrix %&gt;% select(-&#39;NZ_UFZF01000006.1&#39;) %&gt;% subset(rownames(.) != &#39;NZ_UFZF01000006.1&#39;)
-  } 
+  }   
+  # Remove unnecessary
+  dna_matrix &lt;- dna_matrix %&gt;% subset(rownames(.) %in% df$genomic_id) %&gt;% select(any_of(df$genomic_id))
   return(dna_matrix)
 },mc.cores=6) %&gt;% `names&lt;-`(species)</code></pre>
 <pre class="r"><code>setwd(&#39;~/Desktop/gl_merlin/&#39;)
