--- a/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-09" />
+<meta name="date" content="2025-10-30" />
 
-<title>Generate pairs for SNP distance analyses</title>
+<title>SNP Clustering Step 2: Generate pairs for SNP distance analyses</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,10 +350,10 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Generate pairs for SNP distance
-analyses</h1>
+<h1 class="title toc-ignore">SNP Clustering Step 2: Generate pairs for
+SNP distance analyses</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-09</h4>
+<h4 class="date">2025-10-30</h4>
 
 </div>
 
@@ -388,7 +388,7 @@ Sys.info()</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.7
+Running under: macOS Sequoia 15.7.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -440,7 +440,13 @@ loaded via a namespace (and not attached):
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
-<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)</code></pre>
+<pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd_w_sra_metadata.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)
+
+paste0(&quot;Number of considered isolates: &quot;,nrow(df))</code></pre>
+<pre><code>[1] &quot;Number of considered isolates: 168&quot;</code></pre>
+</div>
+<div id="species-with-more-than-one-isolate" class="section level1">
+<h1>Species with more than one isolate</h1>
 <pre class="r"><code>species &lt;- table(df$Species) %&gt;% subset(.&gt;1)  %&gt;% names
 
 species_simple &lt;- str_split(string = species,pattern = &quot; &quot;,simplify = T) %&gt;% apply(.,1,FUN=function(x){
@@ -449,11 +455,16 @@ species_simple &lt;- str_split(string = species,pattern = &quot; &quot;,simplify
   paste0(genus,species)}) 
 
 dist_matrices &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_matrices.RDS&#39;)</code></pre>
+</div>
+<div id="subset-metadata-to-species-of-interest" class="section level1">
+<h1>Subset metadata to species of interest</h1>
 <pre class="r"><code># Subset metadata to species
 clean_datasets &lt;- function(metadata,mat,species){
   # Curate datasets
+  ## Species of interest
   species_df &lt;- metadata %&gt;% subset(Species ==species)  
   rownames(species_df) &lt;- species_df$isolate_no
+  ## Isolates of interest
   species_mat &lt;- mat[species_df$genomic_id,species_df$genomic_id]
   # Update datasets
   results &lt;- list(species_df,species_mat) %&gt;% `names&lt;-`(c(&quot;df&quot;,&quot;mat&quot;))
@@ -502,7 +513,7 @@ update_pair_types_w_info &lt;- function(pair_types_df,df,voi){
   
   return(as.data.frame(pair_types_df))
 } </code></pre>
-<pre class="r"><code>voi = c(&quot;household&quot;,&quot;Species&quot;,&quot;Species_ST&quot;,&quot;specimen&quot;,&#39;visit&#39;,&#39;specimen_category&#39;,&#39;isolate_name&#39;,&#39;MERLIN_subject_id&#39;)
+<pre class="r"><code>voi = c(&quot;household&quot;,&#39;subject_id&#39;,&#39;ncbi_id&#39;,&quot;visit&quot;,&quot;collect_date&quot;,&quot;Species&quot;,&quot;Species_ST&quot;,&quot;subject_category&quot;,&#39;subject_category_simplified&#39;)
 
 pairtype_datasets &lt;- pbmcapply::pbmclapply(species_simple,FUN=function(x){ 
   data &lt;- get(paste0(x,&quot;_data&quot;))
